--- a/test2_gestures/test2_set1/gestures_set1_instructions.html
+++ b/test2_gestures/test2_set1/gestures_set1_instructions.html
@@ -46,12 +46,12 @@
     </div>
 
     <div>
-      <img src="/assets/like.png" id="inner" class="items">
-      <img src="/assets/heart.png" id="inner" class="items">
-      <img src="/assets/laugh.png" id="inner" class="items">
-      <img src="/assets/care.png" id="inner" class="items">
-      <img src="/assets/sad.png" id="inner" class="items">
-      <img src="/assets/angry.png" id="inner" class="items">
+      <img src="/assets/like.png" id="inner_like" class="items_1">
+      <img src="/assets/heart.png" id="inner_heart" class="items_1">
+      <img src="/assets/laugh.png" id="inner_laugh" class="items_1">
+      <img src="/assets/care.png" id="inner_care" class="items_1">
+      <img src="/assets/sad.png" id="inner_sad" class="items_1">
+      <img src="/assets/angry.png" id="inner_angry" class="items_1">
     </div>
 
     <!-- bottom -->
