--- a/test2_gestures/test2_set1/gestures_set1_instructions.html
+++ b/test2_gestures/test2_set1/gestures_set1_instructions.html
@@ -52,6 +52,7 @@
       <img src="/assets/care.png" id="inner_care" class="items_1">
       <img src="/assets/sad.png" id="inner_sad" class="items_1">
       <img src="/assets/angry.png" id="inner_angry" class="items_1">
+      <img src="/assets/error.png" id="inner_error" class="items_1">
     </div>
 
     <!-- bottom -->
