updates to instructions for gesture1

--- a/test1_vibration/test1_set2/test1_set2_instructions.html
+++ b/test1_vibration/test1_set2/test1_set2_instructions.html
@@ -29,8 +29,8 @@
     </p> -->
       
     <p>
-      Once you have familiarized yourself with all of the vibrations, press the 'Proceed'
-      button to move onto the experiment. 
+        Once the timer has elapsed, you will be redirected to the experiment. In the experiment,
+        your goal is to match the incoming vibration with its corresponding emoticon.
     </p>
 
     <table>
