--- a/test2_gestures/index.html
+++ b/test2_gestures/index.html
@@ -35,7 +35,7 @@
           <li><b>You will have 1 minute to re-learn Vibration Set 1</b></li>
           <li>Then, you will learn and experiment with the first set of assigned gestures</li>
           <li>After, you will be tested on a sequence of 12 random vibrations selected from Vibration Set 1</li>
-          <li>For each vibration, respond with the corresponding gesture to the best of your abilities</li>
+          <li>For each trial, you will match the incoming vibration with its corresponding gesture while blindfolded</li>
           <li><b>After you complete each set, show the alert box to a test administrator</b></li>
           <li>You will then be directed to learn and test the second set of gestures</li>
         </ul>
