--- a/test2_gestures/test2_set1/gestures_set1_instructions.html
+++ b/test2_gestures/test2_set1/gestures_set1_instructions.html
@@ -14,16 +14,16 @@
   <button id="timerButton" onclick=javascript:clicked()>Click Here!</button>
   <!-- 60 seconds, 1 minute-->
   <h1 id="timer">1:00</h1>
-  <h1>
+  <h1 class="margin-bottom">
     Set 1: Participant Instructions
   </h1>
 
-  <p>
-    Each emoticon is associated with a corner of the screen and a sequence of taps in that corner.
-  </p>
+  <div class="margin-bottom">
+    Each emoticon is associated with a corner and a sequence of taps in that corner. Tap 'Enter' to submit gesture.
+  </div>
 
   <!-- <p id = selectNow>Wait...</p> -->
-  <hr>
+  <hr class ="margin-btoom">
 
   <div class="outer">
     <!-- top -->
