--- a/test2_gestures/vibration_instructions/vibration_instructions1.html
+++ b/test2_gestures/vibration_instructions/vibration_instructions1.html
@@ -32,8 +32,7 @@
     </p> -->
       
     <p>
-      Once you have familiarized yourself with all of the vibrations, press the 'Proceed'
-      button to move onto the experiment. 
+        Once the timer has elapsed, you will be redirected to the interactive instructions for Gesture Set 1.
     </p>
 
     <table id="Instruction_Table">
