updates to appearance

--- a/test2_gestures/test2_set2/gestures_set2_instructions.html
+++ b/test2_gestures/test2_set2/gestures_set2_instructions.html
@@ -13,11 +13,11 @@
     <button id = "timerButton" onclick = javascript:clicked()>Click Here!</button>
     <!-- 60 seconds, 1 minute-->
     <h1 id = "timer">1:00</h1>
-    <h1>
+    <h1 class = "margin-bottom">
       Set 2: Participant Instructions
     </h1>
     <p>
-      Swipe the box <b>(left or right)</b> below to select your reaction to send.<br> After you select the emoticon you want, you can <b>swipe up</b> to submit, which will then reset back to the first emote.
+      Swipe the box <b>(left or right)</b> to select a reaction to send. After selecting an emoticon, you can <b>swipe up</b> to submit. Submitting a gesture resets the slider to the first emoticon.
     </p>
     
     <div class="slide slide_wrap">
