updated gesture 2 instructions

--- a/test2_gestures/test2_set2/gestures_set2_instructions.html
+++ b/test2_gestures/test2_set2/gestures_set2_instructions.html
@@ -21,12 +21,12 @@
     </p>
     
     <div class="slide slide_wrap">
-      <div class="slide_item item1"><img src="/assets/like.png" class="items"></div>
-      <div class="slide_item item2"><img src="/assets/heart.png" class="items"></div>
-      <div class="slide_item item3"><img src="/assets/laugh.png" class="items"></div>
-      <div class="slide_item item4"><img src="/assets/care.png" class="items"></div>
-      <div class="slide_item item5"><img src="/assets/sad.png" class="items"></div>
-      <div class="slide_item item6"><img src="/assets/angry.png" class="items"></div>
+      <div class="slide_item item1"><img src="/assets/like.png" class="items"><br>0 Swipes<br></div>
+      <div class="slide_item item2"><img src="/assets/heart.png" class="items"><br>1 Right Swipe</div>
+      <div class="slide_item item3"><img src="/assets/laugh.png" class="items"><br>2 Right Swipes</div>
+      <div class="slide_item item4"><img src="/assets/care.png" class="items"><br>3 Right Swipes</div>
+      <div class="slide_item item5"><img src="/assets/sad.png" class="items"><br>4 Right Swipes</div>
+      <div class="slide_item item6"><img src="/assets/angry.png" class="items"><br>5 Right Swipes</div>
       <ul class="slide_pagination"></ul>
     </div>
     
